--- a/src/app/pages/home/components/list-view/vehicles/vehicle-details/vehicle-details.component.html
+++ b/src/app/pages/home/components/list-view/vehicles/vehicle-details/vehicle-details.component.html
@@ -29,7 +29,7 @@
 
       <!-- Overview Tab -->
       <p-tabpanel value="overview">
-        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 text-sm text-gray-700">
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 text-sm mt-4 text-gray-700">
           <ng-container *ngIf="vehicle; else skeletonOverview">
             <div class="card-box">
               <div class="label">Last Update</div>
@@ -53,7 +53,7 @@
 
       <!-- Sensors Tab -->
       <p-tabpanel value="sensors">
-        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 text-sm text-gray-700">
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 text-sm mt-4 text-gray-700">
           <ng-container *ngIf="vehicle as d; else skeletonSensors">
             <div class="card-box"><strong>Power:</strong> {{ d.ign ? 'On' : 'Off' }}</div>
             <div class="card-box"><strong>External Battery:</strong> {{ d.extVolt }} V</div>
