--- a/src/app/pages/devices/devices.component.html
+++ b/src/app/pages/devices/devices.component.html
@@ -1,1 +1,12 @@
-<p>devices works!</p>
+   <div class="p-8">
+       <div class="w-[calc(100vw-150px)]">
+           <app-generic-table
+           [selectedItems]="selectedRowItems"
+           [toolBarStartActions]="toolbarItems"
+           [tableConfig]="tableConfig"
+           [tableData]="(devices$ | async)"
+           [isLoading]="isLoading$ | async"
+           (onToolBarStartAction)="handleToolBarActions($event)"
+           />
+        </div>
+    </div>
