--- a/src/app/pages/devices/devices.component.html
+++ b/src/app/pages/devices/devices.component.html
@@ -1,20 +1,94 @@
-   <div class="p-8">
-       <div class="w-[calc(100vw-150px)]">
-           <app-generic-table
-           [selectedItems]="selectedRowItems"
-           [toolBarStartActions]="toolbarItems"
-           [tableConfig]="tableConfig"
-           [tableData]="(devices$ | async)"
-           [isLoading]="isLoading$ | async"
-           (onToolBarStartAction)="handleToolBarActions($event)"
-           (onActionClick)="handleInTableActions($event)"
-           />
-        </div>
+<div class="p-8">
+    <div class="w-[calc(100vw-150px)]">
+        <app-generic-table [selectedItems]="selectedRowItems" [toolBarStartActions]="toolbarItems"
+            [tableConfig]="tableConfig" [tableData]="(devices$ | async)" [isLoading]="isLoading$ | async"
+            (onToolBarStartAction)="handleToolBarActions($event)" (onActionClick)="handleInTableActions($event)" />
     </div>
+</div>
 
 
-    <ng-template #createUpdateDevice>
+<ng-template #createUpdateDevice>
     <app-generic-form-generator [config]="formFields" [initialData]="formFields.isEditMode ? editData : null"
-        (formSubmit)="onUserFormSubmit($event)" (formCancel)="onFormCancel()"
+        (formSubmit)="onDeviceFormSubmit($event)" (formCancel)="onFormCancel()"
         (formValueChanges)="onFormValueChange($event)"></app-generic-form-generator>
+</ng-template>
+
+
+<ng-template #viewMoreDetails>
+    <div class="w-full mx-auto">
+
+        <!-- Header -->
+        <div class="flex items-center justify-between mb-4 md:mb-6">
+            <div class="flex items-center gap-3">
+                <p-avatar [label]="(device?.userName?.[0] || '?').toUpperCase()" shape="circle"
+                    styleClass="shadow"></p-avatar>
+                <div>
+                    <div class="text-lg md:text-xl font-semibold text-gray-800">
+                        {{ device?.userName || 'Entity' }}
+                    </div>
+                    <div class="text-xs md:text-sm text-gray-500">{{ device?.email || '—' }}</div>
+                </div>
+            </div>
+        </div>
+
+        <p-divider></p-divider>
+        <!-- Tabs -->
+        <p-tabs [(value)]="activeTab" class="bg-white rounded-xl shadow-sm border border-gray-100">
+            <p-tablist>
+                @for (tab of tabsConfig; track tab.key) {
+                <p-tab [value]="tab.key"><i [class]="tab.icon + ' mr-2'"></i>{{ tab.label }}</p-tab>
+                }
+            </p-tablist>
+
+            <p-tabpanels>
+                @for (tab of tabsConfig; track tab.key) {
+                <p-tabpanel [value]="tab.key">
+                    @if (tab.type === 'table') {
+                    <app-generic-table [tableConfig]="tab.tableConfig" [tableData]="dataMap[tab.key] || []"
+                        [isLoading]="loadingMap[tab.key]" />
+                    }
+
+                    <!-- Card Type -->
+                    @if (tab.type === 'cards') {
+                    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                        @for (card of tab.cardFields; track card.key) {
+                        <div class="p-4 rounded-xl border border-gray-100 bg-gray-50">
+                            <div class="text-xs uppercase text-gray-500 mb-1">{{ card.label }}</div>
+                            <div class="text-sm font-medium text-gray-800">
+                                @if (card.chip) {
+                                <p-chip [label]="device?.[card.key] || '—'"></p-chip>
+                                } @else if (card.date) {
+                                {{ device?.[card.key] | date:'medium' }}
+                                } @else if (card.boolean) {
+                                {{ device?.[card.key] ? 'Enabled' : 'Disabled' }}
+                                } @else {
+                                {{ device?.[card.key] || '—' }}
+                                }
+                            </div>
+                        </div>
+                        }
+                    </div>
+                    }
+
+                    @if(tab.type === 'forms') {
+                    <ng-container>
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                            @for (group of tab.formGroups; track $index) {
+                            <div class="p-4 rounded-xl border border-gray-200 bg-gray-50 shadow-sm">                    
+                                <!-- Form -->
+                                <app-generic-form-generator [config]="group" [initialData]="null"
+                                    (formSubmit)="onConfigurationFormSubmit($event)" (formCancel)="onFormCancel()"
+                                    (formValueChanges)="onFormValueChange($event)" />
+                            </div>
+                            }
+                        </div>
+                    </ng-container>
+                    }
+
+
+                </p-tabpanel>
+                }
+            </p-tabpanels>
+        </p-tabs>
+    </div>
 </ng-template>
