--- a/src/app/shared/components/generic-path-replay/generic-path-replay.component.html
+++ b/src/app/shared/components/generic-path-replay/generic-path-replay.component.html
@@ -1,5 +1,5 @@
 <div class="bg-[#F9F9F9] shadow-sm border border-gray-200 p-4 h-full">
-    <app-generic-form-generator [config]="formFields" [initialData]="null" (formSubmit)="onFormSubmit($event)"></app-generic-form-generator>
+    <app-generic-form-generator [config]="formFields" [initialData]="defaultPlaybackObj" (formSubmit)="onFormSubmit($event)"></app-generic-form-generator>
 </div>
 
 <!-- Professional Playback Controls Panel -->
